--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -7,8 +7,6 @@ ARG APP_NAME
 ARG APP_PATH
 
 COPY . /usr/share/nginx/html
-COPY ./assets $APP_PATH/assets
 
-COPY ./hello_world $APP_PATH/hello_world
-COPY ./simple_clock $APP_PATH/simple_clock
-COPY ./todo $APP_PATH/todo
+COPY ./assets $APP_PATH/assets
+COPY ./examples $APP_PATH/examples
